# Vidito

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
qml/: main.qml
src/: editorstate.cpp  editorstate.h  main.cpp
